variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: ambiguous reference to overloaded definition,
both method * in class Double of type (x: Char)Double
and  method * in class Double of type (x: Byte)Double
match expected type ?
while (2.0 * biscuit = caseOrange + 1) {
           ^